[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/paralax3/paralaxB3.png" type="Texture" id=1]
[ext_resource path="res://Assets/paralax3/paralaxE3_3.png" type="Texture" id=2]
[ext_resource path="res://Assets/paralax3/paralaxE3_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/paralax3/paralaxE3_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/music/LevelMusic3.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/map/blockL3.png" type="Texture" id=6]
[ext_resource path="res://world-3/level3-2.gd" type="Script" id=7]
[ext_resource path="res://Hope.tscn" type="PackedScene" id=8]
[ext_resource path="res://EnemyGene.tscn" type="PackedScene" id=9]
[ext_resource path="res://enemyCock.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemyWasp.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "blockL3.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2647.05, 33.4249 )

[node name="level3-2" type="Node2D"]
pause_mode = 2
position = Vector2( -5.25732, -0.381371 )
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
pause_mode = 1
tile_set = SubResource( 2 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -524274, 0, 0, -458738, 0, 0, -393202, 0, 0, -327666, 0, 0, -262130, 0, 0, -196599, 0, 0, -196598, 0, 0, -196594, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131058, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65522, 0, 0, 14, 0, 0, 22, 0, 0, 65550, 0, 0, 65558, 0, 0, 131086, 0, 0, 131094, 0, 0, 196622, 0, 0, 196630, 0, 0, 262166, 0, 0, 327702, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393238, 0, 0, 458774, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0 )

[node name="Hope" parent="." instance=ExtResource( 8 )]
pause_mode = 1
position = Vector2( 169.805, -133.642 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
pause_mode = 1
scroll_ignore_camera_zoom = true

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/sky"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="ele2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.2, 0 )
motion_offset = Vector2( 0, 400 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ele2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="ele3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.6, 0 )
motion_offset = Vector2( 0, 300 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ele3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="ele1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0 )
motion_offset = Vector2( 0, 500 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ele1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Enemys" type="Node2D" parent="."]
pause_mode = 1

[node name="EnemyGene" parent="Enemys" instance=ExtResource( 9 )]
position = Vector2( 2408.9, 560.721 )

[node name="EnemyGene2" parent="Enemys" instance=ExtResource( 9 )]
position = Vector2( 1071.36, 319.863 )

[node name="enemyCock" parent="Enemys" instance=ExtResource( 10 )]
position = Vector2( 2208.09, 559.816 )

[node name="enemyWasp" parent="Enemys" instance=ExtResource( 11 )]
position = Vector2( 409.319, -98.6036 )

[node name="enemyWasp2" parent="Enemys" instance=ExtResource( 11 )]
position = Vector2( 532.618, -157.847 )

[node name="enemyWasp3" parent="Enemys" instance=ExtResource( 11 )]
position = Vector2( 644.618, -225.847 )

[node name="enemyWasp4" parent="Enemys" instance=ExtResource( 11 )]
position = Vector2( 1471.37, 733.765 )

[node name="enemyWasp5" parent="Enemys" instance=ExtResource( 11 )]
position = Vector2( 1862.07, 733.643 )

[node name="Fallzone" type="Area2D" parent="."]
pause_mode = 1
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fallzone"]
position = Vector2( 1999.3, 1251.7 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 5 )
volume_db = -5.0
autoplay = true

[node name="timerNext" type="Timer" parent="."]
pause_mode = 1
wait_time = 1.3

[connection signal="enemy_destroy" from="Enemys/EnemyGene" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="Enemys/EnemyGene2" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="Enemys/enemyCock" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="Enemys/enemyWasp" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="Enemys/enemyWasp2" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="Enemys/enemyWasp3" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="Enemys/enemyWasp4" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="enemy_destroy" from="Enemys/enemyWasp5" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="body_entered" from="Fallzone" to="." method="_on_Fallzone_body_entered"]
[connection signal="timeout" from="timerNext" to="." method="_on_timerNext_timeout"]
